[package]
repository = "https://github.com/Cube-OS/terminal-macro"
name = "terminal-macro"
version = "0.1.1"
authors = ["Patrick Oppel <patrick.oppel94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
quote = "1.0"
cargo_metadata = "<0.15.4"
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"

[features]
default = []
debug = []
